--- a/Package.nuspec
+++ b/Package.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>ChangFeng.MojangSharpCore</id>
     <version>0.0.1</version>
@@ -12,5 +12,8 @@
     <description>.Net Core implementation of MojangSharp</description>
     <releaseNotes>Code conversion.</releaseNotes>
     <copyright>Copyright 2019</copyright>
+    <dependencies>
+      <dependency id="Newtonsoft.Json" version="12.0.2" />
+    </dependencies>
   </metadata>
 </package>
